# march_madness

./: .gitignore  LICENSE  README.md  app.py  main.py  optuna.sqlite3  pyproject.toml
assets/M/ppp/: advance.csv  coefs.csv
assets/W/ppp/: season_team_coefs.csv
docs/: index.html
docs/assets/: CellStatus-CNNGwOIK.js  ConnectedDataExplorerComponent-CfU-ThkK.js  ErrorBoundary-dxChUL02.js  ImperativeModal-DoGv2BXV.js  JsonOutput-9XtRRx5l.js  LazyAnyLanguageCodeMirror-CoYqQxHb.js  MarimoErrorOutput-Bc9JufDr.js  RSPContexts-LWFBF00h.js  RenderHTML-0dk6-mYI.js  add-cell-with-ai-3_AIzd22.js  add-connection-dialog-ux7eCDRM.js  agent-panel-CdOqi3vb.js  ai-model-dropdown-DWOGmhDj.js  alert-dialog-CXspBRlP.js  any-language-editor-DYgTL8eG.js  app-config-button-BxCSZCVS.js  button-BKVLeSTX.js  cache-panel-8E_Y5OSb.js  cell-editor-CuHdpTsy.js  cell-link-CcAqXeeg.js  cells-EJo3u4za.js  chat-display-DFUo2Riv.js  chat-panel-Dl4jq1Dp.js  chat-ui-CysJeVE6.js  column-preview-DrU255Z3.js  command-DvF_4mQa.js  command-palette-DaEVrXkC.js  common-Bty2yo-n.js  components-B8TZ_vT_.js  components-Dh-L-jYg.js  copy-icon-BGs1Pbai.js  datasource-DY0N42ZB.js  dependency-graph-panel-C23HsAdh.js  dialog-BYjetQgE.js  documentation-panel-okcEKCQM.js  download-TSo32ofd.js  edit-page-DOK2VJe6.js  error-banner-bXc_9BBZ.js  error-panel-aq2j0jIa.js  field-DTzXkFLZ.js  (+48 more)
public/W/ppp/: advance.csv  (+1 more)
src/march_madness/: __init__.py  dashboard.py  derive.py  encoder.py  geocoding.py  loader.py  loading.py  log.py  model.py  odds.py  path.py  settings.py  trainer.py  tuner.py  utils.py
tasks/: train.py
(+17 files in other folders)
